--- a/today.html
+++ b/today.html
@@ -10,5 +10,11 @@
     <p>
         Hello everyone and welcome to our new git repository
     </p>
+    <p>
+        hello again and this is the new update for today
+    </p>
+    <p>
+        hello
+    </p>
 </body>
 </html>
